sonar-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
spec:
  replicas: 1
  template:
    metadata:
      name: sonar
      labels:
        name: sonar
    spec:
      containers:
        - image: sonarqube:5.3
          args:
            - -Dsonar.web.context=/sonar
          name: sonar
          ports:
            - containerPort: 9000
              name: sonar
