sonar-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar-postgres
  name: sonar-postgres
  namespace: sonar
spec:
  ports:
    - port: 5432
  selector:
    name: sonar-postgres
