sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
  namespace: sonar
spec:
  ports:
    - port: 80
      targetPort: 9000
      name: sonarport
  selector:
    name: sonar
  type: LoadBalancer
