nexus-cbrdevops-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-cbrdevops-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nexus-cbrdevops.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: nexus-cbrdevops.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: registry-sonatype-nexus
          servicePort: 8081
