sonar-cbrdevops-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar-cbrdevops-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sonar-cbrdevops.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: sonar-cbrdevops.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-sonarqube
          servicePort: 9000
